Fix .search--in-row on mobile

--- a/src/css/blocks/_search.css
+++ b/src/css/blocks/_search.css
@@ -13,6 +13,7 @@
 }
 
 .search--in-row {
+  flex: 1 0 100%;
   @media (--tablet) {
     flex: 1;
   }
